// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> component <Step.Counter /> component should render active behaviour 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #036DC1;
  border: 2px solid #036DC1;
  color: #036DC1;
  background-color: #FFFFFF;
}

.emotion-2 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #036DC1;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px; background-color: rgb(204, 232, 255);"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="typography"
      style="font-weight: 700;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component should render completed behaviour 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #036DC1;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <svg
      fill="none"
      height="8"
      viewBox="0 0 10 8"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 4.818 3.857 7 9 1"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component should render default behaviour 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #036DC1;
  border: 2px solid #036DC1;
  color: #036DC1;
  background-color: #FFFFFF;
}

.emotion-2 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #036DC1;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="typography"
      style="font-weight: 700;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component should render active behaviour 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #036DC1;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component should render completed behaviour 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #036DC1;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
  >
    1
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component should render default behaviour 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #EBECED;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="neutral"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component render active step 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #036DC1;
  border: 2px solid #036DC1;
  color: #036DC1;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #036DC1;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #036DC1;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="counter"
      style="border-width: 1px; background-color: rgb(204, 232, 255);"
    >
      <span
        class="emotion-4 emotion-5"
        color="primary"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="primary"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render default step 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #036DC1;
  border: 2px solid #036DC1;
  color: #036DC1;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #036DC1;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #EBECED;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4 emotion-5"
        color="primary"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="neutral"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render disabled step 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #F8F9FA;
  border: 2px solid #F8F9FA;
  color: #F8F9FA;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #F8F9FA;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #F8F9FA;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="neutralLight_100"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4 emotion-5"
        color="neutralLight_100"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="neutralLight_100"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render error step 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FF4A4A;
  border: 2px solid #FF4A4A;
  color: #FF4A4A;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="error"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4 emotion-5"
        color="error"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="error"
    >
      Label
    </span>
  </li>
</div>
`;
